# danforth-east

./: .gcloudignore  .gitignore  DECA-test.html  LICENSE  README.md  admin_site.py  app.yaml  appengine_config.py  auth.py  cron.yaml  emailer.py  first_sheet_keys.py  first_sheet_titles.py  gapps.py  googledata.py  helpers.py  iframe-test.html  mailchimp.py  main.py  pyproject.toml  requirements.txt  self-serve.py  self_serve.py  sheetdata.py  tasks.py  utils.py
config/: __init__.py  private.py.sample
static/: robots.txt
static/css/: common.css  map-members.css  renew-member.css  self-serve-combo.css  self-serve-join.css  self-serve-volunteer.css
static/js/: authorize-user.js  common.js  login.js  map-members.js  new-member.js  plugins.js  renew-member.js  self-serve-combo.js  self-serve-join.js  self-serve-parent.js  self-serve-volunteer.js
templates/: authorize-user.jinja  bad-user.jinja  base.jinja  index.jinja  login.jinja  logout.jinja  map-members.jinja  new-member.jinja  renew-member.jinja  self-serve-combo.jinja  self-serve-join.jinja  self-serve-volunteer.jinja
templates/imports/: form-field.jinja  member-form-fields.jinja  member-form.jinja  new-member-form.jinja  self-serve-join-form.jinja  self-serve-volunteer-form.jinja  spinner.jinja  volunteer-form-fields.jinja  wait-modal.jinja
templates/tasks/: email-new-member-subject.txt  email-new-member.jinja  email-new-volunteer.jinja  email-renew-member.jinja  email-renewal-reminder-auto-subject.txt  email-renewal-reminder-auto.jinja  email-renewal-reminder.jinja  email-volunteer-interest-rep-subject.jinja  email-volunteer-interest-rep-subject.txt  email-volunteer-interest-rep.jinja
