[tool.poetry]
name = "danforth-east"
version = "2.0.0"
description = ""
authors = ["Adam Pritchard <pritchard.adam@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
python-dateutil = "^2.8.1"
flask-login = "^0.5.0"
google-auth = "^1.21.1"
requests = "^2.24.0"
html2text = "^2020.1.16"
google-api-python-client = "^1.12.1"
google-auth-httplib2 = "^0.0.4"
google-auth-oauthlib = "^0.4.1"
geopy = "^2.0.0"
oauth2client = "^4.1.3"
google-cloud-ndb = "^1.6.0"
grpcio = "^1.32.0"
google-cloud-tasks = "^2.0.0"
Flask-WTF = "^0.14.3"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
