[tool.poetry]
name = "danforth-east"
version = "2.1.0"
description = ""
authors = ["Adam Pritchard <pritchard.adam@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
python-dateutil = "^2.8.2"
flask-login = "^0.6.2"
google-auth = "^2.27.0"
requests = "^2.32.3"
html2text = "^2024.2.26"
google-api-python-client = "^2.123.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.2.0"
geopy = "^2.4.1"
google-cloud-ndb = "^2.2.2"
# Use the precompiled wheel instead of source package
grpcio = {version = "^1.62.0", extras = ["precompiled"]}
google-cloud-tasks = "^2.16.3"
Flask-WTF = "^1.2.1"
cachetools = "^5.5.2"
certifi = "^2025.1.31"
six = "^1.17.0"
urllib3 = "^2.3.0"

[poetry.group.dev.dependencies]
pylint = "^3.0.3"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"
